# Computational-Mathematics

hw1/: CMakeLists.txt  algo.cpp  report.md
hw3/: REPORT.md  compress.py  decompress.py  main.py
